--- a/new/css/main.css
+++ b/new/css/main.css
@@ -606,10 +606,8 @@ a img {
   background-repeat: no-repeat;
 }
 .infopane {
-  z-index: 3;
-  height: 100%;
-  position: relative;
   display: block;
+  padding: 10px;
 }
 @media only screen and (max-width: 460px) {
   #heading {
